# flake8-noreturn

./: .editorconfig  .gitignore  .pre-commit-config.yaml  HISTORY.rst  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
.github/: SECURITY.md
.github/workflows/: main.yml
flake8_noreturn/: __init__.py
tests/: test_flake8_noreturn.py
