[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flake8-noreturn"
version = "1.0.1"
description = "A flake8 plugin to detect return None (-> None) type hints."
authors = ["Krystian Safjan <ksafjan@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/izikeros/flake8-noreturn"
repository = "https://github.com/izikeros/flake8-noreturn"
documentation = "https://github.com/izikeros/flake8-noreturn"

packages = [{include = "flake8_noreturn"}]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^5.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-flake8-path = "^1.3.0"
pytest-randomly = "^3.12.0"

[tool.black]
target-version = ['py38']

[tool.isort]
profile = "black"
add_imports = "from __future__ import annotations"

[tool.mypy]
mypy_path = "src/"
show_error_codes = true
strict = true
warn_unreachable = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.pytest.ini_options]
addopts = """\
    --strict-config
    --strict-markers
    """

[project.entry-points]
"flake8.extension" = {NR = "noreturn:NoReturnChecker"}
