[metadata]
name = flake8-noreturn
version = 1.5.0
description = A flake8 plugin to detect return None type hints.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Krystian Safjan
author_email = ksafjan@gmail.com
url = https://github.com/izikeros/flake8-noreturn
project_urls =
    Changelog = https://github.com/izikeros/flake8-noreturn/blob/main/HISTORY.rst
license = MIT
keywords = flake8
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    flake8>=3.0,!=3.2.0
    importlib-metadata ; python_version < "3.8"
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
flake8.extension =
    NR = flake8_noreturn:NoReturnChecker

[flake8]
max-line-length = 88
extend-ignore = E203
